# agent-swarm

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  phase2.patch  pyproject.toml  tatus  test_backend.py
.cursor/rules/: cursorrules.mdc
.github/workflows/: ci.yml
backend/: startup.sh
backend/agents/: __init__.py  clarify_agent.py  intelligent_rfq_agent.py  order_agent.py  quote_agent.py
backend/app/: db.py  embeddings.py  main.py  models.py  offers.py  routes.py  routes_clarify.py  routes_intelligent_rfq.py  routes_notify.py
backend/email/: outgoing.py
backend/email_templates/: __init__.py  counter_offer.txt  parser.py  po.txt
backend/suppliers/: __init__.py  serp.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: IntelligentRFQChat.jsx  QuoteCard.jsx  QuoteCard.tsx  RFQChat.jsx
frontend/src/contexts/: NotificationContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: RFQChat.tsx
migrations/: 001_init.sql  002_offers.sql  003_rfq_sessions.sql  004_offer_status.sql
notifications/: push.py
pricing/: __init__.py  scrape_catalogs.py
tests/: test_clarify_agent.py  test_db.py  test_imap_integration.py  test_incoming_email.py  test_offers.py  test_price_hunt.py  test_quote_agent.py  test_suppliers.py
tests/e2e/: test_dashboard.py
tests/fixtures/: serp_ok.json
tools/: find_suppliers.py  run_quote.py  search.py
